# imgradient

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgradient.cpp  imgradient.h  imgradient_internal.h
example/: CMakeLists.txt  main.cpp
